Review Request 7895 see PLS-2973 - fixed truncated numbers for record count, missed something, this fixes that

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -646,6 +646,12 @@
                     &.data {
                         @include flex-item(0 1 auto);
                         text-align: right;
+                        &:not(.records) {
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            min-width: 20%;
+                        }
+                        
                         &.data-value-yes {
                             font-weight: bold;
                         }
